Fix overflow issue of editor and preview panes

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  max-height: 730px;
+  max-width: 1440px;
 }
 
 html,
